K8S/order-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: ordernp-srv
spec:
  type: NodePort
  selector:
    app: order
  ports:
    - name: order
      protocol: TCP
      port: 80
      targetPort: 80
