K8S/stockinfo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockinfo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stockinfo
  template:
    metadata:
      labels:
        app: stockinfo
    spec:
      containers:
      - name: stockinfo
        image: helloakinos/stockinfoservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: stockinfo-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: stockinfo
  ports:
  - name: stockinfo
    protocol: TCP
    port: 80
    targetPort: 80
  - name: stockinfogrpc
    protocol: TCP
    port: 124
    targetPort: 124
