K8S/stockinfo-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: stockinfonp-srv
spec:
  type: NodePort
  selector:
    app: stockinfo
  ports:
    - name: stockinfo
      protocol: TCP
      port: 80
      targetPort: 80
