K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: akinslenovomachine.com
    http:
      paths:
      - path: /api/stockinfo
        pathType: Prefix
        backend: 
          service:
            name: stockinfo-clusterip-srv 
            port: 
              number: 80
      - path: /api/orders
        pathType: Prefix
        backend:
          service:
            name: orders-clusterip-srv
            port: 
              number: 80
      - path: /api/tradeanalysis
        pathType: Prefix
        backend: 
          service:
            name: tradeanalysis-clusterip-srv
            port: 
              number: 80
